--- a/requirements.txt
+++ b/requirements.txt
@@ -68,3 +68,12 @@ charset-normalizer==3.3.2
 nistbeacon==0.9.4
 requests==2.31.0
 urllib3==2.0.7
+flatbuffers==2.0.7
+importlib-metadata==4.12.0
+Mako==1.2.2
+Markdown==3.4.1
+MarkupSafe==2.1.1
+pdoc3==0.10.0
+torch==1.12.1
+torchvision==0.13.1
+zipp==3.8.1
