--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,21 @@
-aiohttp==3.9.1
-aiosignal==1.3.1
-attrs==23.1.0
-black==23.12.0
-cffi==1.15.1
-click==8.1.7
 contourpy==1.2.0
-cryptography==40.0.2
 cycler==0.12.1
-ecdsa==0.18.0
-fonttools==4.46.0
-frozenlist==1.4.0
-galois==0.3.6
-idna==3.6
+fonttools==4.49.0
 kiwisolver==1.4.5
-llvmlite==0.41.1
-matplotlib==3.8.2
-mpmath==1.3.0
-multidict==6.0.4
-mypy-extensions==1.0.0
-numba==0.58.1
-numpy==1.25.2
+matplotlib==3.8.3
+memory-profiler==0.61.0
+numpy==1.26.4
 packaging==23.2
-pandas==2.1.2
-pathspec==0.12.1
-Pillow==10.1.0
-platformdirs==4.1.0
-pycparser==2.21
-pycryptodome==3.19.0
+pandas==2.2.1
+pillow==10.2.0
+psutil==5.9.8
 pyparsing==3.1.1
 python-dateutil==2.8.2
-pytz==2023.3.post1
+pytz==2024.1
 six==1.16.0
-sympy==1.12
-typing_extensions==4.8.0
-tzdata==2023.3
-yarl==1.9.4
-appnope==0.1.3
-asttokens==2.4.1
-comm==0.2.0
-debugpy==1.8.0
-decorator==5.1.1
-docutils==0.20.1
-executing==2.0.1
-Faker==19.6.2
-ipykernel==6.26.0
-ipython==8.17.2
-jedi==0.19.1
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-matplotlib-inline==0.1.6
-nest-asyncio==1.5.8
-parso==0.8.3
-pexpect==4.8.0
-prompt-toolkit==3.0.39
-psutil==5.9.6
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.16.1
-pyzmq==25.1.1
-scipy==1.11.3
-stack-data==0.6.3
-tornado==6.3.3
-traitlets==5.13.0
-wcwidth==0.2.9
-certifi==2023.7.22
-charset-normalizer==3.3.2
-nistbeacon==0.9.4
-requests==2.31.0
-urllib3==2.0.7
-flatbuffers==2.0.7
-importlib-metadata==4.12.0
-Mako==1.2.2
-Markdown==3.4.1
-MarkupSafe==2.1.1
-pdoc3==0.10.0
-torch==1.12.1
-torchvision==0.13.1
-zipp==3.8.1
+tzdata==2024.1
+faker
+ecdsa
+black
+galois
+nistbeacon
